--- a/public/sass/components/components.theme-controls.scss
+++ b/public/sass/components/components.theme-controls.scss
@@ -7,7 +7,7 @@
   position: absolute;
   top: -14rem;
   left: -1rem;
-  width: 10rem;
+  width: 11rem;
   padding: 0.8rem 0.5rem;
   background-color: var(--color-text-primary);
   color: var(--color-text-secondary);
